--- a/includes/thesis/part02-chapter04-results.tex
+++ b/includes/thesis/part02-chapter04-results.tex
@@ -195,10 +195,10 @@ For the humerus, the segmentation was closer to the ground truth ($-0.17 mm$).
 \end{figure}
 \noindent
 \Cref{fig:dcs-tester2} depicts the segmentation comparison results via the \acrfull{dc} for test person 2.
-The segmentation overlap according to the \acrshort{dc} shows an increase in segmentation accuracy all segmented anatomical structures: scapula ($+0.45$), clavicle ($+0.32$) and humerus ($+0.69$).
+The segmentation overlap according to the \acrshort{dc} shows an increase in segmentation accuracy for all segmented anatomical structures: scapula ($+0.45$), clavicle ($+0.32$) and humerus ($+0.69$).
 \Cref{fig:hd-tester2} depicts the segmentation comparison results via the \acrfull{hd} for test person 2.
 Whereby \cref{fig:t2-hd-max} displays the maximum distance in millimeters (mm) and \cref{fig:t2-hd-avg} displays the average distance in millimeters.
-As can be seen, in \cref{fig:t2-hd-avg}, the segmentation of test person 2 on average was actually further from the ground truth for all segmented anatomical structures: scapula ($+0.39 mm$), clavicle ($+0.3 mm$) and humerus ($+0.07 mm$).
+As can be seen, in \cref{fig:t2-hd-avg}, the segmentation of test person 2 on average was slightly further from the ground truth for all segmented anatomical structures: scapula ($+0.39 mm$), clavicle ($+0.3 mm$) and humerus ($+0.07 mm$).
 
 
 \section{Test person 3}\label{s:result-3}
