--- a/includes/thesis/part02-chapter05-conclusion.tex
+++ b/includes/thesis/part02-chapter05-conclusion.tex
@@ -125,7 +125,7 @@ when comparing their results using the \glsxtrlong{hd}.
 
 
 \section{Segmentation evaluation: Humerus}\label{s:seg-eval-humerus}
-As can be seen in \cref{tab:humerus-overlap} segmentation of the clavicle with the guide improved in six out of seven testers.
+As can be seen in \cref{tab:humerus-overlap} segmentation of the clavicle with the guide improved in four out of seven testers.
 The mean value of the segmentation overlap between the ground truth and the test person's segmentation increased by $17.71\%$.
 Thus, six out of seven testers appeared to have benefited from reading the guide when tasked with segmenting a mouse 
 clavicle when comparing their performance using the \glsxtrlong{dc}.
@@ -276,6 +276,6 @@ Secondly, the segmentation performance of different guide structures may be eval
 described by \citeauthor{brataUserExperienceImprovement2020}.
 Whereby, testers are divided into two groups without their knowledge.
 Version A of a guide is handed out to group A and version B of a guide is handed out to group B.
-By comparing the performance of the two groups, the performance of different guide formats can be indirectly evaluated.\\
+By comparing the performance of the two groups, the performance of different guide formats can be indirectly evaluated \cite{brataUserExperienceImprovement2020}.\\
 Furthermore, to ensure a consistent bone mask across all testing participants a fixed HU threshold range should be defined \cite{chavezGuidelinesMicroComputed2021}.\\
 Therefore, additional research is required to answer the research question of whether inexperienced users benefit from a segmentation guide.
