--- a/includes/thesis/masterthesis-vars.sty
+++ b/includes/thesis/masterthesis-vars.sty
@@ -20,3 +20,8 @@
 \newcommand{\noTesters}{seven testers}
 \newcommand{\numberofTesters}{7}
 
+\newcommand{\appendixpagenumbering}[1]{
+  \break
+  \pagenumbering{arabic}
+  \renewcommand{\thepage}{\textbf{#1-\arabic{page}}}
+}
