--- a/includes/thesis/part03-page1-appendix.tex
+++ b/includes/thesis/part03-page1-appendix.tex
@@ -2,25 +2,12 @@
 \appendix
 
 \chapter{Appendix A: Segmentation guide}\label{a:guide}
+\appendixpagenumbering{A}
 \includepdf[
-scale=0.9,
-pages=-]{../guide/seg_guide_Rohrbacher_Stefan.pdf}
-%\textbf{Appendix has been temporarily removed to reduce file size}
-
-% \begin{figure}[h]
-% 	\centerline{
-% 		\includegraphics[scale=0.25]{images/dragons.jpg}}
-% 	\caption{Dragons}
-% \end{figure}
-
-
-% \chapter{Appendix B: Sentiment Analysis Python Script}
-% %\lstinputlisting[language=Python, firstline=37, lastline=45]{source_filename.py}
-
-% \lstinputlisting[language=Python,caption={Python Script for Sentiment Analysis of Tweets},label=lst:appendix-tweeets_analyzer]{includes/thesis/part03-page4.1-tweets_analyzer.py}
-
-% \chapter{Appendix C: R Analysis Code}
-
-% \lstinputlisting[language=R,caption={R Analysis Functions},label=lst:appendix-rfunctions]{includes/thesis/part03-page4.2-rfunctions.R}
-
-% \lstinputlisting[language=R,caption={R Analysis Script},label=lst:appendix-rAnalyze]{includes/thesis/part03-page4.3-rAnalyze.R}
+scale=0.85,
+pages=-,
+frame,
+pagecommand={
+%%  \thispagestyle{plain}
+}
+]{../guide/seg_guide_Rohrbacher_Stefan.pdf}
